--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <li class="list-inline-item"><img src="img/in.png"></li>
   <li class="list-inline-item"><img src="img/tik.png"></li>
   <li class="list-inline-item"><img src="img/what.png"></li>
-  <li class="list-inline-item me-auto">All copyrights reserved</li>
+  {% comment %} <h2>iasygxsbhsgagbc</h2> {% endcomment %}
 </ul>
 </div>
 
